docs/v1.5.0.0/_sources/gallery/clad/fusion_degree.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/clad/fusion_degree.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_clad_fusion_degree.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_clad_fusion_degree.py:


Effect of fusion degree
=======================

.. GENERATED FROM PYTHON SOURCE LINES 7-27

.. code-block:: Python

    from FiberFusing.configuration.line import FusedProfile_02x02 as FusedProfile
    from PyOptik import MaterialBank

    material = MaterialBank.fused_silica

    wavelength = 15.5e-6

    structure = FusedProfile(
        fiber_radius=62.5e-6,
        fusion_degree=0.1,
        index=material.compute_refractive_index(wavelength),
    )

    for fusion_degree in ['auto', 0.1, 0.3, 0.6, 0.9, 1.0]:
        structure.fusion_degree = fusion_degree

        structure.plot()


    # -


.. _sphx_glr_download_gallery_clad_fusion_degree.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: fusion_degree.ipynb <fusion_degree.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: fusion_degree.py <fusion_degree.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: fusion_degree.zip <fusion_degree.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
