docs/v1.5.0.4/_sources/gallery/clad/fusion_degree.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/clad/fusion_degree.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_clad_fusion_degree.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_clad_fusion_degree.py:


Effect of fusion degree
=======================

.. GENERATED FROM PYTHON SOURCE LINES 7-27



.. rst-class:: sphx-glr-horizontal


    *

      .. image-sg:: /gallery/clad/images/sphx_glr_fusion_degree_001.png
         :alt: Fiber structure
         :srcset: /gallery/clad/images/sphx_glr_fusion_degree_001.png
         :class: sphx-glr-multi-img

    *

      .. image-sg:: /gallery/clad/images/sphx_glr_fusion_degree_002.png
         :alt: Fiber structure
         :srcset: /gallery/clad/images/sphx_glr_fusion_degree_002.png
         :class: sphx-glr-multi-img

    *

      .. image-sg:: /gallery/clad/images/sphx_glr_fusion_degree_003.png
         :alt: Fiber structure
         :srcset: /gallery/clad/images/sphx_glr_fusion_degree_003.png
         :class: sphx-glr-multi-img

    *

      .. image-sg:: /gallery/clad/images/sphx_glr_fusion_degree_004.png
         :alt: Fiber structure
         :srcset: /gallery/clad/images/sphx_glr_fusion_degree_004.png
         :class: sphx-glr-multi-img

    *

      .. image-sg:: /gallery/clad/images/sphx_glr_fusion_degree_005.png
         :alt: Fiber structure
         :srcset: /gallery/clad/images/sphx_glr_fusion_degree_005.png
         :class: sphx-glr-multi-img

    *

      .. image-sg:: /gallery/clad/images/sphx_glr_fusion_degree_006.png
         :alt: Fiber structure
         :srcset: /gallery/clad/images/sphx_glr_fusion_degree_006.png
         :class: sphx-glr-multi-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    /opt/hostedtoolcache/Python/3.11.10/x64/lib/python3.11/site-packages/PyOptik/material/base_class.py:60: UserWarning: Wavelength range goes from 15.5 µm to 15.5 µm which is outside the allowable range of 209.99999999999997 nm to 6.7 µm µm. [Material: fused_silica]
      warnings.warn(
    INFO:root:Computing the optimal structure geometry
    INFO:root:Computing the optimal core positions
    INFO:root:Core positioning optimization: x = 0.69 -> cost = 1.66e-09 -> core shift: (1.3416970423989811e-05, 7.8885098038782605e-22)
    INFO:root:Core positioning optimization: x = 0.80 -> cost = 1.81e-09 -> core shift: (-1.46537857405566e-05, -8.615695557592047e-22)
    INFO:root:Core positioning optimization: x = 0.62 -> cost = 3.68e-09 -> core shift: (3.0765651823590126e-05, 1.808866967457517e-21)
    INFO:root:Core positioning optimization: x = 0.74 -> cost = 4.78e-11 -> core shift: (3.8220129686450974e-07, 2.2471531069185568e-23)
    INFO:root:Core positioning optimization: x = 0.74 -> cost = 3.83e-11 -> core shift: (-3.065333967852029e-07, -1.8022635731780346e-23)
    INFO:root:Core positioning optimization: x = 0.75 -> cost = 1.02e-10 -> core shift: (-8.167020861622995e-07, -4.801801159239345e-23)
    INFO:root:Core positioning optimization: x = 0.74 -> cost = 2.69e-12 -> core shift: (-2.1506693566809203e-08, -1.2644863757594005e-24)
    INFO:root:Core positioning optimization: x = 0.74 -> cost = 2.23e-12 -> core shift: (1.7852824391831768e-08, 1.0496570819726886e-24)
    INFO:root:Core positioning optimization: x = 0.74 -> cost = 1.85e-12 -> core shift: (1.477104598131832e-08, 8.684638733976777e-25)
    INFO:root:Core positioning optimization: x = 0.74 -> cost = 3.58e-14 -> core shift: (-2.860878538463261e-10, -1.682053972599132e-26)
    INFO:root:Core positioning optimization: x = 0.74 -> cost = 1.05e-12 -> core shift: (-8.39163797434014e-09, -4.933864824888323e-25)
    INFO:root:Core positioning optimization: x = 0.74 -> cost = 1.95e-13 -> core shift: (1.563963573481908e-09, 9.195326211574744e-26)
    INFO:root:Core positioning optimization: x = 0.74 -> cost = 1.74e-13 -> core shift: (-1.3946811184984017e-09, -8.200029760104222e-26)
    INFO:root:Core positioning optimization: x = 0.74 -> cost = 4.32e-15 -> core shift: (3.4579123418809754e-11, 2.0330800860120338e-27)
    INFO:root:Core positioning optimization: x = 0.74 -> cost = 7.73e-14 -> core shift: (6.187520014652487e-10, 3.637953334668153e-26)
    INFO:root:Core positioning optimization: x = 0.74 -> cost = 9.14e-15 -> core shift: (7.311385129054812e-11, 4.298729998254256e-27)
    INFO:root:Core positioning optimization: x = 0.74 -> cost = 5.85e-15 -> core shift: (-4.680801854109332e-11, -2.752078165371359e-27)
    INFO:root:Core positioning optimization: x = 0.74 -> cost = 4.37e-16 -> core shift: (3.49200142001245e-12, 2.053122736395927e-28)
    INFO:root:Core positioning optimization: x = 0.74 -> cost = 3.54e-16 -> core shift: (-2.8291468018130927e-12, -1.6633973155932313e-28)
    INFO:root:Core positioning optimization: x = 0.74 -> cost = 6.89e-16 -> core shift: (-5.509702828525309e-12, -3.239430642188152e-28)
    INFO:root:Core positioning optimization: x = 0.74 -> cost = 1.86e-17 -> core shift: (-1.4859077510087637e-13, -8.736398899831072e-30)
    INFO:root: message: Solution found.
     success: True
      status: 0
         fun: 1.8573835247523967e-17
           x: 0.7424567329472828
         nit: 21
        nfev: 21
    INFO:root:Computing the optimal structure geometry
    INFO:root:Computing the optimal core positions
    INFO:root:Core positioning optimization: x = 0.69 -> cost = 1.66e-09 -> core shift: (1.3416970423989811e-05, 7.8885098038782605e-22)
    INFO:root:Core positioning optimization: x = 0.80 -> cost = 1.81e-09 -> core shift: (-1.46537857405566e-05, -8.615695557592047e-22)
    INFO:root:Core positioning optimization: x = 0.62 -> cost = 3.68e-09 -> core shift: (3.0765651823590126e-05, 1.808866967457517e-21)
    INFO:root:Core positioning optimization: x = 0.74 -> cost = 4.78e-11 -> core shift: (3.8220129686450974e-07, 2.2471531069185568e-23)
    INFO:root:Core positioning optimization: x = 0.74 -> cost = 3.83e-11 -> core shift: (-3.065333967852029e-07, -1.8022635731780346e-23)
    INFO:root:Core positioning optimization: x = 0.75 -> cost = 1.02e-10 -> core shift: (-8.167020861622995e-07, -4.801801159239345e-23)
    INFO:root:Core positioning optimization: x = 0.74 -> cost = 2.69e-12 -> core shift: (-2.1506693566809203e-08, -1.2644863757594005e-24)
    INFO:root:Core positioning optimization: x = 0.74 -> cost = 2.23e-12 -> core shift: (1.7852824391831768e-08, 1.0496570819726886e-24)
    INFO:root:Core positioning optimization: x = 0.74 -> cost = 1.85e-12 -> core shift: (1.477104598131832e-08, 8.684638733976777e-25)
    INFO:root:Core positioning optimization: x = 0.74 -> cost = 3.58e-14 -> core shift: (-2.860878538463261e-10, -1.682053972599132e-26)
    INFO:root:Core positioning optimization: x = 0.74 -> cost = 1.05e-12 -> core shift: (-8.39163797434014e-09, -4.933864824888323e-25)
    INFO:root:Core positioning optimization: x = 0.74 -> cost = 1.95e-13 -> core shift: (1.563963573481908e-09, 9.195326211574744e-26)
    INFO:root:Core positioning optimization: x = 0.74 -> cost = 1.74e-13 -> core shift: (-1.3946811184984017e-09, -8.200029760104222e-26)
    INFO:root:Core positioning optimization: x = 0.74 -> cost = 4.32e-15 -> core shift: (3.4579123418809754e-11, 2.0330800860120338e-27)
    INFO:root:Core positioning optimization: x = 0.74 -> cost = 7.73e-14 -> core shift: (6.187520014652487e-10, 3.637953334668153e-26)
    INFO:root:Core positioning optimization: x = 0.74 -> cost = 9.14e-15 -> core shift: (7.311385129054812e-11, 4.298729998254256e-27)
    INFO:root:Core positioning optimization: x = 0.74 -> cost = 5.85e-15 -> core shift: (-4.680801854109332e-11, -2.752078165371359e-27)
    INFO:root:Core positioning optimization: x = 0.74 -> cost = 4.37e-16 -> core shift: (3.49200142001245e-12, 2.053122736395927e-28)
    INFO:root:Core positioning optimization: x = 0.74 -> cost = 3.54e-16 -> core shift: (-2.8291468018130927e-12, -1.6633973155932313e-28)
    INFO:root:Core positioning optimization: x = 0.74 -> cost = 6.89e-16 -> core shift: (-5.509702828525309e-12, -3.239430642188152e-28)
    INFO:root:Core positioning optimization: x = 0.74 -> cost = 1.86e-17 -> core shift: (-1.4859077510087637e-13, -8.736398899831072e-30)
    INFO:root: message: Solution found.
     success: True
      status: 0
         fun: 1.8573835247523967e-17
           x: 0.7424567329472828
         nit: 21
        nfev: 21
    INFO:root:Computing the optimal structure geometry
    INFO:root:Computing the optimal core positions
    INFO:root:Core positioning optimization: x = 0.69 -> cost = 3.33e-10 -> core shift: (-2.617566366313283e-06, 2.7475674242276328e-22)
    INFO:root:Core positioning optimization: x = 0.80 -> cost = 2.82e-09 -> core shift: (-2.475945616622123e-05, 2.5989131003282156e-21)
    INFO:root:Core positioning optimization: x = 0.62 -> cost = 2.49e-09 -> core shift: (1.1066874105184432e-05, -1.1616508819319727e-21)
    INFO:root:Core positioning optimization: x = 0.71 -> cost = 2.16e-10 -> core shift: (-6.2366169733218575e-06, 6.54635766023339e-22)
    INFO:root:Core positioning optimization: x = 0.71 -> cost = 2.78e-10 -> core shift: (-6.651484565161008e-06, 6.981829591480137e-22)
    INFO:root:Core positioning optimization: x = 0.70 -> cost = 2.92e-12 -> core shift: (-4.783997882326417e-06, 5.02159445056102e-22)
    INFO:root:Core positioning optimization: x = 0.69 -> cost = 1.28e-10 -> core shift: (-3.956494677508368e-06, 4.1529934178375167e-22)
    INFO:root:Core positioning optimization: x = 0.70 -> cost = 2.21e-11 -> core shift: (-4.949779848553053e-06, 5.1956099543475785e-22)
    INFO:root:Core positioning optimization: x = 0.70 -> cost = 2.29e-11 -> core shift: (-4.651676330228428e-06, 4.8827011675686535e-22)
    INFO:root:Core positioning optimization: x = 0.70 -> cost = 1.65e-13 -> core shift: (-4.802231162894035e-06, 5.040733284391237e-22)
    INFO:root:Core positioning optimization: x = 0.70 -> cost = 4.77e-12 -> core shift: (-4.834878686491882e-06, 5.075002242563053e-22)
    INFO:root:Core positioning optimization: x = 0.70 -> cost = 4.47e-13 -> core shift: (-4.806276105836099e-06, 5.044979118843999e-22)
    INFO:root:Core positioning optimization: x = 0.70 -> cost = 3.90e-13 -> core shift: (-4.800745621204015e-06, 5.039173963486371e-22)
    INFO:root:Core positioning optimization: x = 0.70 -> cost = 8.91e-15 -> core shift: (-4.803382756494056e-06, 5.04194207172212e-22)
    INFO:root:Core positioning optimization: x = 0.70 -> cost = 1.76e-13 -> core shift: (-4.804487917601399e-06, 5.043102120497243e-22)
    INFO:root:Core positioning optimization: x = 0.70 -> cost = 2.55e-15 -> core shift: (-4.803340729768396e-06, 5.041897957745175e-22)
    INFO:root:Core positioning optimization: x = 0.70 -> cost = 3.85e-14 -> core shift: (-4.803069395227806e-06, 5.041613147413554e-22)
    INFO:root:Core positioning optimization: x = 0.70 -> cost = 1.31e-14 -> core shift: (-4.803237089196225e-06, 5.041789169878851e-22)
    INFO:root:Core positioning optimization: x = 0.70 -> cost = 8.48e-16 -> core shift: (-4.803318236502954e-06, 5.041874347354927e-22)
    INFO:root:Core positioning optimization: x = 0.70 -> cost = 4.06e-15 -> core shift: (-4.803297001514082e-06, 5.041852057733369e-22)
    INFO:root:Core positioning optimization: x = 0.70 -> cost = 2.51e-16 -> core shift: (-4.803322178481072e-06, 5.041878485110818e-22)
    INFO:root:Core positioning optimization: x = 0.70 -> cost = 3.85e-16 -> core shift: (-4.8033263842070905e-06, 5.041882899713609e-22)
    INFO:root:Core positioning optimization: x = 0.70 -> cost = 4.96e-17 -> core shift: (-4.803324168319298e-06, 5.041880573774071e-22)
    INFO:root: message: Solution found.
     success: True
      status: 0
         fun: 4.957607160636636e-17
           x: 0.698588094004763
         nit: 23
        nfev: 23
    INFO:root:Computing the optimal structure geometry
    INFO:root:Computing the optimal core positions
    INFO:root:Core positioning optimization: x = 0.69 -> cost = 1.66e-09 -> core shift: (1.3416970423989811e-05, 7.8885098038782605e-22)
    INFO:root:Core positioning optimization: x = 0.80 -> cost = 1.81e-09 -> core shift: (-1.46537857405566e-05, -8.615695557592047e-22)
    INFO:root:Core positioning optimization: x = 0.62 -> cost = 3.68e-09 -> core shift: (3.0765651823590126e-05, 1.808866967457517e-21)
    INFO:root:Core positioning optimization: x = 0.74 -> cost = 4.78e-11 -> core shift: (3.8220129686450974e-07, 2.2471531069185568e-23)
    INFO:root:Core positioning optimization: x = 0.74 -> cost = 3.83e-11 -> core shift: (-3.065333967852029e-07, -1.8022635731780346e-23)
    INFO:root:Core positioning optimization: x = 0.75 -> cost = 1.02e-10 -> core shift: (-8.167020861622995e-07, -4.801801159239345e-23)
    INFO:root:Core positioning optimization: x = 0.74 -> cost = 2.69e-12 -> core shift: (-2.1506693566809203e-08, -1.2644863757594005e-24)
    INFO:root:Core positioning optimization: x = 0.74 -> cost = 2.23e-12 -> core shift: (1.7852824391831768e-08, 1.0496570819726886e-24)
    INFO:root:Core positioning optimization: x = 0.74 -> cost = 1.85e-12 -> core shift: (1.477104598131832e-08, 8.684638733976777e-25)
    INFO:root:Core positioning optimization: x = 0.74 -> cost = 3.58e-14 -> core shift: (-2.860878538463261e-10, -1.682053972599132e-26)
    INFO:root:Core positioning optimization: x = 0.74 -> cost = 1.05e-12 -> core shift: (-8.39163797434014e-09, -4.933864824888323e-25)
    INFO:root:Core positioning optimization: x = 0.74 -> cost = 1.95e-13 -> core shift: (1.563963573481908e-09, 9.195326211574744e-26)
    INFO:root:Core positioning optimization: x = 0.74 -> cost = 1.74e-13 -> core shift: (-1.3946811184984017e-09, -8.200029760104222e-26)
    INFO:root:Core positioning optimization: x = 0.74 -> cost = 4.32e-15 -> core shift: (3.4579123418809754e-11, 2.0330800860120338e-27)
    INFO:root:Core positioning optimization: x = 0.74 -> cost = 7.73e-14 -> core shift: (6.187520014652487e-10, 3.637953334668153e-26)
    INFO:root:Core positioning optimization: x = 0.74 -> cost = 9.14e-15 -> core shift: (7.311385129054812e-11, 4.298729998254256e-27)
    INFO:root:Core positioning optimization: x = 0.74 -> cost = 5.85e-15 -> core shift: (-4.680801854109332e-11, -2.752078165371359e-27)
    INFO:root:Core positioning optimization: x = 0.74 -> cost = 4.37e-16 -> core shift: (3.49200142001245e-12, 2.053122736395927e-28)
    INFO:root:Core positioning optimization: x = 0.74 -> cost = 3.54e-16 -> core shift: (-2.8291468018130927e-12, -1.6633973155932313e-28)
    INFO:root:Core positioning optimization: x = 0.74 -> cost = 6.89e-16 -> core shift: (-5.509702828525309e-12, -3.239430642188152e-28)
    INFO:root:Core positioning optimization: x = 0.74 -> cost = 1.86e-17 -> core shift: (-1.4859077510087637e-13, -8.736398899831072e-30)
    INFO:root: message: Solution found.
     success: True
      status: 0
         fun: 1.8573835247523967e-17
           x: 0.7424567329472828
         nit: 21
        nfev: 21
    INFO:root:Computing the optimal structure geometry
    INFO:root:Computing the optimal core positions
    INFO:root:Core positioning optimization: x = 0.69 -> cost = 1.10e-09 -> core shift: (8.835674198188908e-06, -1.0486526440556956e-21)
    INFO:root:Core positioning optimization: x = 0.80 -> cost = 2.16e-09 -> core shift: (-1.7541120147889366e-05, 2.0818492862212178e-21)
    INFO:root:Core positioning optimization: x = 0.62 -> cost = 3.07e-09 -> core shift: (2.5137429618331348e-05, -2.9834092388139837e-21)
    INFO:root:Core positioning optimization: x = 0.72 -> cost = 1.22e-10 -> core shift: (9.795982271088534e-07, -1.1626257916804382e-22)
    INFO:root:Core positioning optimization: x = 0.74 -> cost = 2.61e-10 -> core shift: (-2.0890323281675476e-06, 2.4793459166927507e-22)
    INFO:root:Core positioning optimization: x = 0.72 -> cost = 1.12e-10 -> core shift: (8.994157643031457e-07, -1.0674620840311237e-22)
    INFO:root:Core positioning optimization: x = 0.73 -> cost = 1.98e-11 -> core shift: (-1.580031051753923e-07, 1.8752431370220967e-23)
    INFO:root:Core positioning optimization: x = 0.73 -> cost = 1.12e-10 -> core shift: (-8.95590635089093e-07, 1.0629222698933266e-22)
    INFO:root:Core positioning optimization: x = 0.73 -> cost = 9.85e-14 -> core shift: (7.883564017051249e-10, -9.356524545629898e-26)
    INFO:root:Core positioning optimization: x = 0.72 -> cost = 4.30e-11 -> core shift: (3.440334829978367e-07, -4.0831249941665503e-23)
    INFO:root:Core positioning optimization: x = 0.73 -> cost = 5.78e-12 -> core shift: (4.627611789878111e-08, -5.492232092617083e-24)
    INFO:root:Core positioning optimization: x = 0.73 -> cost = 3.47e-12 -> core shift: (-2.779252142618235e-08, 3.298526000935554e-24)
    INFO:root:Core positioning optimization: x = 0.73 -> cost = 5.61e-13 -> core shift: (4.4898321285076915e-09, -5.328709759229387e-25)
    INFO:root:Core positioning optimization: x = 0.73 -> cost = 7.08e-13 -> core shift: (-5.660427227734469e-09, 6.718018167821481e-25)
    INFO:root:Core positioning optimization: x = 0.73 -> cost = 3.15e-14 -> core shift: (-2.518901677137867e-10, 2.98953180537961e-26)
    INFO:root:Core positioning optimization: x = 0.73 -> cost = 2.82e-13 -> core shift: (-2.2564535640369823e-09, 2.678048039168749e-25)
    INFO:root:Core positioning optimization: x = 0.73 -> cost = 3.12e-14 -> core shift: (-2.494273115686337e-10, 2.9603016578630006e-26)
    INFO:root:Core positioning optimization: x = 0.73 -> cost = 1.15e-14 -> core shift: (9.168352156033871e-11, -1.0881361754993015e-26)
    INFO:root:Core positioning optimization: x = 0.73 -> cost = 4.47e-14 -> core shift: (3.577888827495813e-10, -4.2463795007318886e-26)
    INFO:root:Core positioning optimization: x = 0.73 -> cost = 8.61e-15 -> core shift: (6.890996510932647e-11, -8.178506301757932e-27)
    INFO:root:Core positioning optimization: x = 0.73 -> cost = 3.57e-15 -> core shift: (-2.854087075726021e-11, 3.387343048956188e-27)
    INFO:root:Core positioning optimization: x = 0.73 -> cost = 2.79e-15 -> core shift: (-2.2327733107221134e-11, 2.6499433800444576e-27)
    INFO:root:Core positioning optimization: x = 0.73 -> cost = 8.53e-16 -> core shift: (6.822244402434133e-12, -8.096908599675263e-28)
    INFO:root:Core positioning optimization: x = 0.73 -> cost = 3.82e-15 -> core shift: (3.053764343176682e-11, -3.624327901817331e-27)
    INFO:root:Core positioning optimization: x = 0.73 -> cost = 1.54e-15 -> core shift: (1.2340431844795607e-11, -1.4646110976999123e-27)
    INFO:root:Core positioning optimization: x = 0.73 -> cost = 2.17e-16 -> core shift: (-1.7339193232254746e-12, 2.0578838082512205e-28)
    INFO:root:Core positioning optimization: x = 0.73 -> cost = 1.20e-15 -> core shift: (-9.600056230377792e-12, 1.1393725153266039e-27)
    INFO:root:Core positioning optimization: x = 0.73 -> cost = 9.11e-17 -> core shift: (7.289330882062801e-13, -8.651265423588588e-29)
    INFO:root:Core positioning optimization: x = 0.73 -> cost = 3.99e-16 -> core shift: (3.1917854860855077e-12, -3.788136847829955e-28)
    INFO:root: message: Solution found.
     success: True
      status: 0
         fun: 9.111661213019148e-17
           x: 0.7259168700370755
         nit: 29
        nfev: 29
    INFO:root:Computing the optimal structure geometry
    INFO:root:Computing the optimal core positions
    INFO:root:Core positioning optimization: x = 0.69 -> cost = 4.51e-10 -> core shift: (1.963729859487593e-06, -1.8019683017243452e-23)
    INFO:root:Core positioning optimization: x = 0.80 -> cost = 2.66e-09 -> core shift: (-2.187212175888847e-05, 2.0070413407705135e-22)
    INFO:root:Core positioning optimization: x = 0.62 -> cost = 2.57e-09 -> core shift: (1.6695096310443204e-05, -1.531984361306332e-22)
    INFO:root:Core positioning optimization: x = 0.71 -> cost = 1.50e-10 -> core shift: (-2.3816568286405594e-06, 2.1854686835159464e-23)
    INFO:root:Core positioning optimization: x = 0.74 -> cost = 1.05e-09 -> core shift: (-9.058497336424519e-06, 8.312306798527771e-23)
    INFO:root:Core positioning optimization: x = 0.71 -> cost = 1.09e-10 -> core shift: (-2.080156570748954e-06, 1.9088044035196153e-23)
    INFO:root:Core positioning optimization: x = 0.70 -> cost = 5.50e-11 -> core shift: (-8.870051118569489e-07, 8.139383771709735e-24)
    INFO:root:Core positioning optimization: x = 0.70 -> cost = 2.05e-10 -> core shift: (2.0187875427870808e-07, -1.8524906276917157e-24)
    INFO:root:Core positioning optimization: x = 0.70 -> cost = 2.37e-11 -> core shift: (-1.1139734526702865e-06, 1.0222102805921951e-23)
    INFO:root:Core positioning optimization: x = 0.70 -> cost = 1.07e-11 -> core shift: (-1.3640113825099003e-06, 1.251651423742741e-23)
    INFO:root:Core positioning optimization: x = 0.70 -> cost = 1.33e-11 -> core shift: (-1.383153715554957e-06, 1.2692169138235548e-23)
    INFO:root:Core positioning optimization: x = 0.70 -> cost = 1.41e-12 -> core shift: (-1.2758707577055001e-06, 1.1707713519628685e-23)
    INFO:root:Core positioning optimization: x = 0.70 -> cost = 9.92e-12 -> core shift: (-1.2140314898690608e-06, 1.1140260721043445e-23)
    INFO:root:Core positioning optimization: x = 0.70 -> cost = 1.75e-13 -> core shift: (-1.2873838748943045e-06, 1.1813360801651266e-23)
    INFO:root:Core positioning optimization: x = 0.70 -> cost = 4.20e-12 -> core shift: (-1.3166529783302665e-06, 1.2081941514811906e-23)
    INFO:root:Core positioning optimization: x = 0.70 -> cost = 6.12e-13 -> core shift: (-1.2905583762645265e-06, 1.1842490830994453e-23)
    INFO:root:Core positioning optimization: x = 0.70 -> cost = 1.75e-13 -> core shift: (-1.2848437004323905e-06, 1.1790051516827105e-23)
    INFO:root:Core positioning optimization: x = 0.70 -> cost = 1.27e-16 -> core shift: (-1.2861121226972902e-06, 1.1801690881088963e-23)
    INFO:root:Core positioning optimization: x = 0.70 -> cost = 1.70e-16 -> core shift: (-1.2861142780704466e-06, 1.1801710659339258e-23)
    INFO:root:Core positioning optimization: x = 0.70 -> cost = 1.10e-14 -> core shift: (-1.286032728800099e-06, 1.1800962342561283e-23)
    INFO:root:Core positioning optimization: x = 0.70 -> cost = 4.30e-15 -> core shift: (-1.2860817969270546e-06, 1.1801412604133337e-23)
    INFO:root:Core positioning optimization: x = 0.70 -> cost = 4.23e-16 -> core shift: (-1.286109967324127e-06, 1.1801671102837915e-23)
    INFO:root: message: Solution found.
     success: True
      status: 0
         fun: 1.2676506160555952e-16
           x: 0.7029404036841678
         nit: 22
        nfev: 22
    INFO:root:Computing the optimal structure geometry
    INFO:root:Computing the optimal core positions
    INFO:root:Core positioning optimization: x = 0.69 -> cost = 3.56e-10 -> core shift: (-4.908214479213755e-06, 6.227808663608867e-23)
    INFO:root:Core positioning optimization: x = 0.80 -> cost = 2.80e-09 -> core shift: (-2.620312336988761e-05, 3.3247943713074943e-22)
    INFO:root:Core positioning optimization: x = 0.62 -> cost = 2.51e-09 -> core shift: (8.252763002555026e-06, -1.0471553177573507e-22)
    INFO:root:Core positioning optimization: x = 0.71 -> cost = 2.01e-10 -> core shift: (-8.449861254799696e-06, 1.0721642127049892e-22)
    INFO:root:Core positioning optimization: x = 0.71 -> cost = 3.98e-10 -> core shift: (-9.71736764764608e-06, 1.2329922964812517e-22)
    INFO:root:Core positioning optimization: x = 0.70 -> cost = 6.98e-12 -> core shift: (-7.206030267148554e-06, 9.143401927122893e-23)
    INFO:root:Core positioning optimization: x = 0.70 -> cost = 3.65e-11 -> core shift: (-6.929415236407474e-06, 8.792417777544808e-23)
    INFO:root:Core positioning optimization: x = 0.70 -> cost = 3.36e-11 -> core shift: (-7.375818536273392e-06, 9.358838489219563e-23)
    INFO:root:Core positioning optimization: x = 0.70 -> cost = 5.53e-13 -> core shift: (-7.158018337444127e-06, 9.082481787419107e-23)
    INFO:root:Core positioning optimization: x = 0.70 -> cost = 1.43e-11 -> core shift: (-7.0706997227817356e-06, 8.9716871945602e-23)
    INFO:root:Core positioning optimization: x = 0.70 -> cost = 1.67e-12 -> core shift: (-7.150879103024091e-06, 9.073423139684608e-23)
    INFO:root:Core positioning optimization: x = 0.70 -> cost = 1.22e-12 -> core shift: (-7.169330195166211e-06, 9.09683488584654e-23)
    INFO:root:Core positioning optimization: x = 0.70 -> cost = 6.18e-14 -> core shift: (-7.1611497612276515e-06, 9.086455107707197e-23)
    INFO:root:Core positioning optimization: x = 0.70 -> cost = 1.59e-13 -> core shift: (-7.162554984326179e-06, 9.08823813096838e-23)
    INFO:root:Core positioning optimization: x = 0.70 -> cost = 6.03e-14 -> core shift: (-7.161159407231611e-06, 9.086467347080053e-23)
    INFO:root:Core positioning optimization: x = 0.70 -> cost = 1.51e-14 -> core shift: (-7.161639199321275e-06, 9.087076133298607e-23)
    INFO:root:Core positioning optimization: x = 0.70 -> cost = 7.00e-14 -> core shift: (-7.161988998066746e-06, 9.0875199769136e-23)
    INFO:root:Core positioning optimization: x = 0.70 -> cost = 3.51e-14 -> core shift: (-7.161766785670557e-06, 9.087238021776567e-23)
    INFO:root:Core positioning optimization: x = 0.70 -> cost = 4.72e-15 -> core shift: (-7.1615132182465e-06, 9.086916281680018e-23)
    INFO:root:Core positioning optimization: x = 0.70 -> cost = 2.59e-14 -> core shift: (-7.161378074464403e-06, 9.08674480392152e-23)
    INFO:root:Core positioning optimization: x = 0.70 -> cost = 1.87e-15 -> core shift: (-7.161531408887849e-06, 9.086939362952077e-23)
    INFO:root:Core positioning optimization: x = 0.70 -> cost = 2.26e-15 -> core shift: (-7.161557715708802e-06, 9.086972742472928e-23)
    INFO:root:Core positioning optimization: x = 0.70 -> cost = 2.90e-16 -> core shift: (-7.161541457199316e-06, 9.086952112794507e-23)
    INFO:root:Core positioning optimization: x = 0.70 -> cost = 8.61e-17 -> core shift: (-7.1615438526785846e-06, 9.086955152308506e-23)
    INFO:root:Core positioning optimization: x = 0.70 -> cost = 9.17e-16 -> core shift: (-7.161549147884942e-06, 9.08696187115345e-23)
    INFO:root:Core positioning optimization: x = 0.70 -> cost = 3.87e-16 -> core shift: (-7.161545768643103e-06, 9.086957583388208e-23)
    INFO:root: message: Solution found.
     success: True
      status: 0
         fun: 8.6070769861768e-17
           x: 0.6994092939016031
         nit: 26
        nfev: 26
    INFO:root:Computing the optimal structure geometry
    INFO:root:Computing the optimal core positions
    INFO:root:Core positioning optimization: x = 0.69 -> cost = 3.92e-10 -> core shift: (-7.198862592114183e-06, 1.0420218162121996e-22)
    INFO:root:Core positioning optimization: x = 0.80 -> cost = 2.73e-09 -> core shift: (-2.7646790573553985e-05, 4.0018209206341627e-22)
    INFO:root:Core positioning optimization: x = 0.62 -> cost = 2.51e-09 -> core shift: (5.4386518999256505e-06, -7.872346301920703e-23)
    INFO:root:Core positioning optimization: x = 0.71 -> cost = 1.76e-10 -> core shift: (-1.0708074094755854e-05, 1.5499735789616484e-22)
    INFO:root:Core positioning optimization: x = 0.72 -> cost = 6.39e-10 -> core shift: (-1.3621048444756772e-05, 1.97162113563158e-22)
    INFO:root:Core positioning optimization: x = 0.70 -> cost = 3.81e-11 -> core shift: (-9.848642802608811e-06, 1.42557251636411e-22)
    INFO:root:Core positioning optimization: x = 0.70 -> cost = 4.72e-11 -> core shift: (-9.319896599735306e-06, 1.3490374982854082e-22)
    INFO:root:Core positioning optimization: x = 0.70 -> cost = 6.34e-12 -> core shift: (-9.651754666094938e-06, 1.3970733290306077e-22)
    INFO:root:Core positioning optimization: x = 0.70 -> cost = 1.95e-12 -> core shift: (-9.600360107243523e-06, 1.3896340633309857e-22)
    INFO:root:Core positioning optimization: x = 0.70 -> cost = 1.92e-11 -> core shift: (-9.493232579979393e-06, 1.3741275553100734e-22)
    INFO:root:Core positioning optimization: x = 0.70 -> cost = 2.23e-12 -> core shift: (-9.598622595971084e-06, 1.3893825618432687e-22)
    INFO:root:Core positioning optimization: x = 0.70 -> cost = 7.12e-13 -> core shift: (-9.616860316582447e-06, 1.3920224375891733e-22)
    INFO:root:Core positioning optimization: x = 0.70 -> cost = 6.60e-13 -> core shift: (-9.616538197925192e-06, 1.3919758115195739e-22)
    INFO:root:Core positioning optimization: x = 0.70 -> cost = 2.05e-13 -> core shift: (-9.611178153514066e-06, 1.391199955175489e-22)
    INFO:root:Core positioning optimization: x = 0.70 -> cost = 8.71e-13 -> core shift: (-9.60704602753059e-06, 1.3906018377135967e-22)
    INFO:root:Core positioning optimization: x = 0.70 -> cost = 2.82e-13 -> core shift: (-9.610699018104902e-06, 1.3911306012264657e-22)
    INFO:root:Core positioning optimization: x = 0.70 -> cost = 6.52e-14 -> core shift: (-9.612851203673788e-06, 1.3914421260384228e-22)
    INFO:root:Core positioning optimization: x = 0.70 -> cost = 2.92e-13 -> core shift: (-9.614259510161498e-06, 1.3916459757529181e-22)
    INFO:root:Core positioning optimization: x = 0.70 -> cost = 1.16e-13 -> core shift: (-9.613166379580192e-06, 1.3914877471578976e-22)
    INFO:root:Core positioning optimization: x = 0.70 -> cost = 1.51e-14 -> core shift: (-9.61235346574721e-06, 1.3913700794099973e-22)
    INFO:root:Core positioning optimization: x = 0.70 -> cost = 8.75e-14 -> core shift: (-9.611904536421543e-06, 1.391305097734725e-22)
    INFO:root:Core positioning optimization: x = 0.70 -> cost = 4.29e-15 -> core shift: (-9.612420533028212e-06, 1.3913797872727424e-22)
    INFO:root:Core positioning optimization: x = 0.70 -> cost = 1.17e-14 -> core shift: (-9.612519626963967e-06, 1.391394130933503e-22)
    INFO:root:Core positioning optimization: x = 0.70 -> cost = 5.41e-16 -> core shift: (-9.61244378548322e-06, 1.391383153021857e-22)
    INFO:root:Core positioning optimization: x = 0.70 -> cost = 1.76e-15 -> core shift: (-9.612458078307862e-06, 1.3913852218813332e-22)
    INFO:root:Core positioning optimization: x = 0.70 -> cost = 2.43e-16 -> core shift: (-9.612445628948678e-06, 1.391383419860015e-22)
    INFO:root:Core positioning optimization: x = 0.70 -> cost = 2.64e-16 -> core shift: (-9.612448773109879e-06, 1.3913838749714309e-22)
    INFO:root: message: Solution found.
     success: True
      status: 0
         fun: 2.4326575479523427e-16
           x: 0.7008228133108589
         nit: 27
        nfev: 27






|

.. code-block:: Python

    from FiberFusing.configuration.line import FusedProfile_02x02 as FusedProfile
    from PyOptik import MaterialBank

    material = MaterialBank.fused_silica

    wavelength = 15.5e-6

    structure = FusedProfile(
        fiber_radius=62.5e-6,
        fusion_degree=0.1,
        index=material.compute_refractive_index(wavelength),
    )

    for fusion_degree in ['auto', 0.1, 0.3, 0.6, 0.9, 1.0]:
        structure.fusion_degree = fusion_degree

        structure.plot()


    # -


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 9.662 seconds)


.. _sphx_glr_download_gallery_clad_fusion_degree.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: fusion_degree.ipynb <fusion_degree.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: fusion_degree.py <fusion_degree.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: fusion_degree.zip <fusion_degree.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
